apps/base/home-assistant/zwavejs-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zwavejs
  labels:
    app: home-assistant
    role: zwavejs
spec:
  serviceName: zwavejs
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
      role: zwavejs
  template:
    metadata:
      labels:
        app: home-assistant
        role: zwavejs
    spec:
      containers:
        # docs at https://zwave-js.github.io/zwave-js-ui/#/
        # repo at https://github.com/zwave-js/zwave-js-ui
        - name: zwavejs
          # container at https://hub.docker.com/r/zwavejs/zwave-js-ui/tags
          image: zwavejs/zwave-js-ui:9.18.1

          securityContext:
            # needed for /dev/zwave device access
            privileged: true

          resources:
            limits:
              memory: "256Mi"
            requests:
              memory: "112Mi"

          volumeMounts:
            - mountPath: /dev/zwave
              name: zwave-device
            - mountPath: /usr/src/app/store
              name: zwavejs-data

          ports:
            # port for web interface
            - name: web-ui
              containerPort: 8091
            # port for Z-Wave JS websocket server
            - name: websocket
              containerPort: 3000

      # pod-level volumes:
      volumes:
        - name: zwave-device
          hostPath:
            # Do not use /dev/ttyUSBX serial devices, as those mappings can change over time.
            # Instead, use the /dev/serial/by-id/X serial device for your Z-Wave stick.
            path: "/dev/serial/by-id/usb-Silicon_Labs_HubZ_Smart_Home_Controller_C1301B96-if00-port0"

        # zwavejs2mqtt data store
        - name: zwavejs-data
          hostPath:
            path: /mnt/thedatapool/app-data/home-assistant-zwavejs2mqtt/store
