apps/base/home-assistant/home-assistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  # NOTE: using ClusterIP to limit access to within cluster and letting an ingress route external traffic in.
  type: ClusterIP
  ports:
    # port for web interface
    - name: web-ui
      port: 8123
  selector:
    app: home-assistant
    role: home-assistant
