apps/base/home-assistant/home-assistant-ingress.yaml
# NOTE: We use ingress here rather than a simple service so we can route traffic
#   based on hostname and not only IP. Ingress also has the advantage of being
#   able to serve TLS.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-ingress
spec:
  tls:
    - hosts:
        - hass.activescott.com
      secretName: hass-activescott-com-tls

  rules:
    - host: hass.activescott.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                # port of the referenced service. A port name or port number is required for a IngressServiceBackend.
                port:
                  name: web-ui
